# GDMan

./: CHANGELOG.md  Cargo.toml  README.md  release-plz.toml
.github/workflows/: build-publish.yaml  release-plz.yaml  release-plz.yml  release.yaml
src/: cli.rs  commands.rs  common.rs  gd_semver.rs  gdman.rs  github.rs  main.rs
src/commands/: common.rs  current.rs  install.rs  list.rs  uninstall.rs  update.rs
src/github/: github_repo.rs  godot_repo.rs
