[package]
name = "gdman"
version = "0.0.12"
edition = "2021"
repository = "https://github.com/devklick/gdman-rs"
description = "A CLI application for managing versions of Godot"
license = "MIT"

[dependencies]
async_zip = { version = "0.0.17", features = ["deflate", "tokio", "tokio-fs"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.17", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
futures-lite = "2.3.0"
indicatif = "0.17.8"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["json"] }
semver = "1.0.23"
serde = { version = "1.0.210", features = ["derive"] }
stderrlog = "0.6.0"
strum = "0.26.3"
strum_macros = "0.26.4"
tokio = { version = "1.40.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = "0.7.12"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
lnk = "0.5.1"

[target.'cfg(unix)'.dependencies]
symlink = "0.1.0"
openssl = { version = "0.10.59", features = ["vendored"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "~/.gdman/"
# Whether to install an updater program
install-updater = false
